# atlas-pipeline

./: README.md  pyproject.toml
atlas/backfill/: backfill.py  runbook.md
atlas/ingest/: consumer.py
atlas/metrics/: collections.py  definitions.py  delinquency.py  turn_time.py
atlas/warehouse/: schema.sql
docs/changes/: ev_0329010e.md  ev_03400287.md  ev_0391d9fb.md  ev_042da255.md  ev_31ca7bc8.md  ev_3a09c254.md  ev_3b757009.md  ev_3d2b2d86.md  ev_457344a3.md  ev_47e7912a.md  ev_4858ba6a.md  ev_48d2a6c0.md  ev_4d642709.md  ev_4ec5c15d.md  ev_5441cc08.md  ev_549f5524.md  ev_60f5d515.md  ev_714a3109.md  ev_87e9d426.md  ev_88c06261.md  ev_8d9a7f22.md  ev_8edfb31d.md  ev_954c78b4.md  ev_9bf36b25.md  ev_9da9da0b.md  ev_ba0a3936.md  ev_c4a055ba.md  ev_c5444f1c.md  ev_c54d3e1d.md  ev_c6186174.md  ev_c69db4a7.md  ev_c932936c.md  ev_c9fa17ce.md  ev_cc0e87df.md  ev_d32c7500.md  ev_e0e8060b.md  ev_e6925d11.md  ev_e8f4886e.md  ev_f02c1e19.md  ev_f297f76b.md  (+2 more)
tests/: test_backfill_idempotent.py  test_metrics.py
