[project]
name = "atlas-pipeline"
version = "0.4.4"
description = "Atlas: event-spine ingestion + Insights analytics"
requires-python = ">=3.11"
dependencies = [
  "pandas==2.1.4",
  "sqlalchemy==2.0.25",
  "pydantic==2.5.3",
  "apache-airflow==2.8.1",
  "pyarrow==14.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
